# rom-converto

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
crates/rom-converto-benchmark/: Cargo.toml
crates/rom-converto-benchmark/src/: main.rs  report.rs  runner.rs  stats.rs  tool.rs
crates/rom-converto-benchmark/src/bench/: chd.rs  ctr.rs  disc.rs  mod.rs  switch.rs
crates/rom-converto-cli/: Cargo.toml  build.rs
crates/rom-converto-cli/src/: batch.rs  config.rs  dry_run.rs  info_print.rs  logging.rs  main.rs  version.rs
crates/rom-converto-cli/src/commands/: chd.rs  completions.rs  cso.rs  ctr.rs  cue.rs  dat.rs  dol.rs  hash.rs  info_command.rs  mod.rs  nx.rs  playlist.rs  rvl.rs  wup.rs
crates/rom-converto-cli/src/github/: api.rs  error.rs  mod.rs  model.rs
crates/rom-converto-cli/src/updater/: constants.rs  error.rs  mod.rs  release.rs
crates/rom-converto-cli/src/util/: http.rs  mod.rs
crates/rom-converto-cli/tests/: archive_input.rs  dry_run.rs
crates/rom-converto-ffi/: Cargo.toml
crates/rom-converto-ffi/include/: rom_converto.h
crates/rom-converto-ffi/src/: lib.rs
crates/rom-converto-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/rom-converto-gui/src-tauri/capabilities/: default.json
crates/rom-converto-gui/src-tauri/icons/: icon.icns
crates/rom-converto-gui/src-tauri/src/: commands.rs  config_cmds.rs  info_cache.rs  main.rs  progress.rs
crates/rom-converto-lib/: Cargo.toml
crates/rom-converto-lib/src/: lib.rs  pipeline.rs  runner.rs
crates/rom-converto-lib/src/cd/: ecc.rs  mod.rs
crates/rom-converto-lib/src/chd/: info.rs  map.rs  mod.rs
crates/rom-converto-lib/src/chd/compression/: cdfl.rs  cdzs.rs  dvd.rs  flac.rs  huffman8.rs  lzma.rs  mod.rs  zlib.rs
crates/rom-converto-lib/src/chd/cue/: models.rs
crates/rom-converto-lib/src/chd/error/: mod.rs
crates/rom-converto-lib/src/chd/models/: mod.rs
crates/rom-converto-lib/src/chd/reader/: cue_generator.rs  mod.rs  parallel.rs  worker.rs
crates/rom-converto-lib/src/chd/writer/: metadata.rs  mod.rs  parallel.rs  worker.rs
crates/rom-converto-lib/src/config/: mod.rs  write.rs
crates/rom-converto-lib/src/cso/: dax.rs  info.rs  mod.rs  reader.rs  verify.rs  writer.rs
crates/rom-converto-lib/src/cso/compression/: mod.rs
crates/rom-converto-lib/src/cso/error/: mod.rs
crates/rom-converto-lib/src/cso/models/: mod.rs
crates/rom-converto-lib/src/cue/: error.rs  merge.rs  mod.rs  models.rs  to_iso.rs
crates/rom-converto-lib/src/dat/: client.rs  digest.rs  error.rs  fixdat.rs  mod.rs  model.rs  rename.rs  verdict.rs
crates/rom-converto-lib/src/info/: image.rs  mod.rs
crates/rom-converto-lib/src/nintendo/: disc_input.rs  legacy_input.rs  mod.rs
crates/rom-converto-lib/src/nintendo/ctr/: cia.rs  encrypt.rs  exefs.rs  info.rs  mod.rs  seed.rs  test_fixtures.rs
crates/rom-converto-lib/src/nintendo/ctr/convert/: cci_to_cia.rs  cia_to_cci.rs  mod.rs  template.rs
crates/rom-converto-lib/src/nintendo/ctr/decrypt/: artifact_path.rs  cia.rs  mod.rs  reader.rs  romfs_worker.rs  util.rs
crates/rom-converto-lib/src/nintendo/ctr/error/: mod.rs
crates/rom-converto-lib/src/nintendo/ctr/models/: certificate.rs  cia.rs  exe_fs_header.rs  mod.rs  ncch_header.rs  ncsd_header.rs  seeddb.rs  smdh.rs  ticket.rs  title_metadata.rs
crates/rom-converto-lib/src/nintendo/ctr/title_key/: error.rs  mod.rs
crates/rom-converto-lib/src/nintendo/ctr/util/: mod.rs
crates/rom-converto-lib/src/nintendo/ctr/verify/: chain.rs  mod.rs  root_key.rs
crates/rom-converto-lib/src/nintendo/ctr/z3ds/: compress.rs  compress_parallel.rs  compress_worker.rs  decompress.rs  decompress_parallel.rs  decompress_worker.rs  error.rs  mod.rs  seekable.rs
crates/rom-converto-lib/src/nintendo/dol/: constants.rs  disc.rs  fst.rs  info.rs  mod.rs  test_fixtures.rs  verify.rs
crates/rom-converto-lib/src/nintendo/dol/models/: banner.rs  boot_bin.rs  mod.rs
crates/rom-converto-lib/src/nintendo/gcz/: error.rs  format.rs  mod.rs  reader.rs  test_fixtures.rs  verify.rs
crates/rom-converto-lib/src/nintendo/nkit/: crc.rs  error.rs  format.rs  gaps.rs  mod.rs  reader.rs  test_fixtures.rs  verify.rs  wii.rs
crates/rom-converto-lib/src/nintendo/nx/: compress.rs  constants.rs  container.rs  decompress.rs  derive_paths.rs  error.rs  info.rs  keys.rs  mod.rs  romfs.rs  test_fixtures.rs  verify.rs  walker.rs
crates/rom-converto-lib/src/nintendo/nx/crypto/: aes_ctr.rs  aes_xts.rs  derive.rs  mod.rs
crates/rom-converto-lib/src/nintendo/nx/models/: cnmt.rs  hfs0.rs  mod.rs  nacp.rs  nca.rs  pfs0.rs  ticket.rs
crates/rom-converto-lib/src/nintendo/nx/ncz/: compress.rs  compress_worker.rs  decompress.rs  decompress_worker.rs  header.rs  mod.rs  reader.rs  reencrypt.rs
crates/rom-converto-lib/src/nintendo/nx/util/: mod.rs  positional_reader.rs
crates/rom-converto-lib/src/nintendo/rvl/: common_keys.rs  constants.rs  disc.rs  fst.rs  info.rs  mod.rs  partition.rs  partition_reader.rs  test_fixtures.rs  verify.rs
crates/rom-converto-lib/src/nintendo/rvz/: constants.rs  error.rs  mod.rs  packing.rs  regions.rs  verify.rs  worker_pool.rs
crates/rom-converto-lib/src/nintendo/wbfs/: error.rs  format.rs  mod.rs  reader.rs  usage.rs  writer.rs
crates/rom-converto-lib/src/nintendo/wia/: codec.rs  error.rs  format.rs  mod.rs  reader.rs  test_fixtures.rs  verify.rs
crates/rom-converto-lib/src/nintendo/wup/: app_xml.rs  common_keys.rs  compress.rs  compress_parallel.rs  compress_worker.rs  constants.rs  crypto.rs  error.rs  info.rs  loadiine.rs  meta_image.rs  meta_source.rs  meta_xml.rs  mod.rs  name_table.rs  path_tree.rs  streaming_sink.rs  ticket_synth.rs  title_key_derive.rs  verify.rs  zarchive_writer.rs
crates/rom-converto-lib/src/playlist/: detect.rs  mod.rs  write.rs
crates/rom-converto-lib/src/runner/: models.rs
crates/rom-converto-lib/src/util/: archive.rs  conflict.rs  footgun.rs  fs.rs  group_reader.rs  hash.rs  hash_cache.rs  http.rs  iso9660.rs  maker_codes.rs  mod.rs  pixel.rs  plan.rs  pread.rs  report.rs  tally.rs  template.rs  verify.rs  worker_pool.rs
(+346 files in other folders)
