[package]
name = "rom-converto"
version = "0.2.1"
edition = "2024"
build = "build.rs"
authors = ["DevYukine <devyukine@gmx.de>"]
description = "CLI for converting, compressing, decompressing, encrypting, and decrypting ROMs."

[dependencies]
anyhow = "^1.0"
thiserror = "^2"
log = "^0.4"
dotenv = "^0.15"
env_logger = "^0.11"
clap = { version = "^4.5", features = ["derive", "cargo"] }
tokio = { version = "^1", features = ["full"] }
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "system-proxy"] }
async-recursion = "^1.1"
binrw = "^0.15"
aes = "^0.8"
cbc = "^0.1.2"
block-padding = "^0.3"
hex = "^0.4"
md5 = "^0.8"
pbkdf2 = "^0.12.2"
hmac = "^0.12"
sha1 = "^0.10"
sha256 = "^1.6"
ctr = "^0.9.2"
byteorder = "1.4"
hex-literal = "^1.0"
lazy_static = "^1.5"
futures = "^0.3"
sha2 = "^0.10"

[build-dependencies]
built = "^0.8"
