[workspace]
resolver = "3"
members = [
    "crates/rom-converto-lib",
    "crates/rom-converto-cli",
    "crates/rom-converto-benchmark",
    "crates/rom-converto-gui/src-tauri",
]

[workspace.package]
version = "0.16.0"
edition = "2024"
authors = ["DevYukine <devyukine@gmx.de>"]

[workspace.dependencies]
anyhow = "^1.0"
thiserror = "^2"
log = "^0.4"
futures = "^0.3"
lazy_static = "^1.5"
tokio = "^1"
tokio-util = "^0.7"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
reqwest = { version = "^0.13", default-features = false, features = ["charset", "http2", "system-proxy", "json", "stream", "rustls"] }
