[package]
name = "rom-converto-cli"
version.workspace = true
edition.workspace = true
build = "build.rs"
authors.workspace = true
description = "CLI for converting, compressing, decompressing, encrypting, and decrypting ROMs."

[[bin]]
name = "rom-converto"
path = "src/main.rs"

[dependencies]
rom-converto-lib = { path = "../rom-converto-lib" }
anyhow = "^1.0"
log = "^0.4"
dotenv = "^0.15"
env_logger = "^0.11"
clap = { version = "^4.6", features = ["derive", "cargo"] }
tokio = { version = "^1", features = ["full"] }
reqwest = { version = "^0.13", default-features = false, features = ["charset", "http2", "system-proxy", "json", "stream", "rustls"] }
serde = { version = "^1.0", features = ["derive"] }
thiserror = "^2"
bytes = "^1.11"
regex = "^1.12"
futures = "^0.3"
tower = { version = "^0.5", features = ["util", "limit"] }
lazy_static = "^1.5"
const_format = "^0.2"
indicatif = "^0.18"
indicatif-log-bridge = "0.2.3"

[build-dependencies]
built = "^0.8"
