[package]
name = "rom-converto-cli"
version.workspace = true
edition.workspace = true
build = "build.rs"
authors.workspace = true
description = "CLI for converting, compressing, decompressing, encrypting, and decrypting ROMs."

[[bin]]
name = "rom-converto"
path = "src/main.rs"

[dependencies]
rom-converto-lib = { path = "../rom-converto-lib" }
anyhow.workspace = true
log.workspace = true
dotenv = "^0.15"
env_logger = "^0.11"
clap = { version = "^4.6", features = ["derive", "cargo"] }
clap_complete = "^4.6"
tokio = { workspace = true, features = ["full"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bytes = "^1.11"
regex = "^1.12"
futures.workspace = true
tower = { version = "^0.5", features = ["util", "limit"] }
lazy_static.workspace = true
const_format = "^0.2"
indicatif = "^0.18"
indicatif-log-bridge = "0.2.3"

[dev-dependencies]
tempfile = "^3"

[build-dependencies]
built = "^0.8"
