[package]
name = "rom-converto-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Library for converting, compressing, decompressing, encrypting, and decrypting ROMs."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["fs", "sync", "rt", "rt-multi-thread", "macros", "io-util"] }
tokio-util.workspace = true
futures.workspace = true
async-recursion = "^1.1"
binrw = "^0.15"
byteorder = "1.5"
chrono = "^0.4"
lazy_static.workspace = true

# RustCrypto cipher stack (cipher 0.5): keep these five in lockstep
aes = "^0.9"
cbc = "^0.2"
block-padding = "^0.4"
ctr = "^0.10"
xts-mode = "^0.6"

# RustCrypto hash stack held at digest 0.10: rsa 0.9 (latest stable) requires it; bump all together when rsa 0.10 is stable
pbkdf2 = "^0.12.2"
hmac = "^0.12"
sha1 = "^0.10"
sha2 = "^0.10"
md_5 = { version = "^0.10", package = "md-5" }
rsa = { version = "^0.9", features = ["sha2"] }

hex = "^0.4"
md5 = "^0.8"
sha256 = "^1.6"
hex-literal = "^1.1"
serde.workspace = true
serde_json.workspace = true
crc = "^3.4"
dirs = "^6"
toml = "^1.1"
toml_edit = { version = "^0.23", features = ["serde"] }

# Pixel codecs for `info` icon extraction
png = "^0.18"
image = { version = "^0.25", default-features = false, features = ["jpeg", "png", "tga"] }

# Compression
flate2 = { version = "^1.1", features = ["zlib"], default-features = false }
lzma-sdk-sys = "^0.1"
flacenc = "^0.5"
claxon = "^0.4"
zstd = { version = "^0.13", features = ["zstdmt"] }
lz4 = "^1.28"
bzip2 = "^0.6"

# HTTP (for seed DB fetch)
reqwest.workspace = true
tempfile = "^3"
fs4 = "^1.1"

# Transparent archive input (zip/7z/rar/tar/tar.gz); gzip via flate2 above
zip = { version = "^2", default-features = false, features = ["deflate", "deflate64", "bzip2", "lzma", "zstd", "xz"] }
sevenz-rust2 = { version = "^0.21", features = ["brotli", "deflate", "lz4", "zstd"] }
tar = "^0.4"
unrar = { package = "unrar-ng", version = "^0.7" }
