[package]
name = "rom-converto-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "GUI for converting, compressing, decompressing, encrypting, and decrypting ROMs."

[dependencies]
rom-converto-lib = { path = "../../rom-converto-lib" }
tauri = { version = "^2", features = [] }
tauri-plugin-dialog = "^2"
tauri-plugin-shell = "^2"
tauri-plugin-notification = "^2"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
log.workspace = true
anyhow.workspace = true

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dev-dependencies]
tempfile = "^3"
